修改啟動時使用的記憶體大小